karnc/tests/fixtures/positive/76_multi_file_context/src/commerce/orders/types.karn
context commerce.orders

exports transparent { OrderError }

type OrderError = enum {
  EmptyCart,
  TooManyItems,
}

type OrderId = String where Matches("ORD-[0-9]+")
