karnc/tests/fixtures/negative/58_external_construction/src/commerce/payment.karn
context commerce.payment {
  exports transparent { AuthId }

  type AuthId = String where Matches("AUTH-[0-9]+")
}
